--- a/web/skinny.css
+++ b/web/skinny.css
@@ -9,7 +9,6 @@
 }
 p{
 	font-family:futura;
-	margin-left:-10%;
 }
 a{
 	text-decoration:none;
@@ -60,17 +59,17 @@ html, body,#siteContainer {
 }
 .leftPage{
 	position:absolute;
-	width:50%;
+	width:100%;
 	left:0px;
 	top:0px;
-	height:100%;	
+	height:35%;	
 }
 .rightPage{
 	position:absolute;
-	width:50%;
-	right:0px;
-	top:0px;
-	height:100%;	
+	width:100%;
+	left:15%;
+	top:50%;
+	height:40%;	
 }
 .fullPage{
 	position:absolute;
@@ -120,9 +119,7 @@ h1,h3{
 user-select: none;
 }
 
-img#stache{
-	margin-left:-20%;
-}
+
 .rotate{
     -webkit-transition-duration: 1.3s;
     -moz-transition-duration: 1.3s;
@@ -138,7 +135,7 @@ img#stache{
  
     }  
  
-.rotate:hover
+.rotate:hover, 
 {
     -webkit-transform:rotate(360deg);
     -moz-transform:rotate(360deg);
